gotopostBox description update. was only 1+ year overdue ;)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7380 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -155,7 +155,7 @@ foxtrick.ExtraPlayerInfo.Flag.desc=Show nationalities of players as flags.
 foxtrick.PlayerFilters.desc=Add a select box for filtering players on players page.
 foxtrick.HistoryStats.desc=Compiles an overview of team's history.
 foxtrick.LargeFlags.desc=Enlarge flags on player page if faces are shown (may crash on GNU/Linux)
-foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
+foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page. Hides HTs 'Mark as unread from'!! You can use the 'MarkUnread' module to have this function in the posting's footers.
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a select box on players page. Clicking on the header switches between list and select box.
 foxtrick.CopyPlayerAd.desc=A button on player's page for copying his details (in HT-ML).
 foxtrick.CopyPlayerAd.Sorted.desc=Sort the skills in descending order.
