--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -288,7 +288,7 @@ foxtrick.SkillTable.ColouredYouth.desc=Show coloured youth skills
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
-foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format
+foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format (strongly recommended)
 #CountryList
 foxtrick.CountryList.desc=Modifications for country names
 foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
@@ -982,7 +982,7 @@ tab.about=About
 tab.changes=Changes
 tab.help=Help
 
-foxtrick.prefs.basicPreferences=Basic Preferences
+foxtrick.prefs.basicPreferences=Localization
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTDateformat=Date format
 foxtrick.prefs.captionHTCountry=Country
@@ -1036,7 +1036,7 @@ delete_foxtrick_branches_ask=Are you sure you want to restore to default setting
 delete_oauth_ask=Delete OAuth token/secret for teamid %s? 
 disable_all_foxtrick_modules_ask=Are you sure you want to disable all modules?
 
-foxtrick.prefs.AdditionalOptions=Additional options
+foxtrick.prefs.AdditionalOptions=General options
 foxtrick.prefs.smallcopyicons=Show copy icons in the header instead of sidebar
 foxtrick.prefs.DisplayHTMLDebugOutput=Show FoxTrick log on bottom of pages (for debugging)
 
