--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -79,6 +79,7 @@ foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
 foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
+foxtrick.Links.desc=Basic module essential for other link modules to work properly.
 foxtrick.LinksLeague.desc=Adds some external links to the series page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
 foxtrick.LinksCountry.desc=Adds some external links to the country page
