links.js: add option to add custom link feeds.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7495 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -893,6 +893,9 @@ LocalTime.hattrick.title=Time in Hattrick time zone. Click the clock to switch t
 LocalTime.local=Local time
 LocalTime.local.title=Time in local time zone. Click the clock to switch to Hattrick time.
 
+# Links
+Links.feeds=Feeds of link lists (separated by line breaks)
+
 #actions
 Copy=Copy
 View=View
