moved bot filter to filters
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7512 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -378,7 +378,7 @@ YouthPromotes.today=Player can be promoted today!
 # links
 foxtrick.links.boxheader=Links
 
-#teamstats
+#teamstats+filters
 foxtrick.TeamStats.label=Team overview
 foxtrick.TeamStats.PlayerNotToOld.label=Players < 19 yr
 foxtrick.TeamStats.PlayerToOld.label=Players >= 19 yr
@@ -388,6 +388,7 @@ foxtrick.TeamStats.TransferListed.label=Transfer-listed
 foxtrick.TeamStats.Pictures.label=Faces
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.ActivePlayers.label=Active players
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -828,7 +829,6 @@ foxtrick.RapidId.ViewById=View By ID
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
 foxtrick.SkillTable.Add_homegrown_title=Adds all homegrown players from the current
-foxtrick.SkillTable.Remove_bot_players_title=Removes players of bot teams
 foxtrick.SkillTable.showTimeInClub_title=Shows time since player joined the club's senior team
 foxtrick.SkillTable.detach=Detach
 
@@ -902,7 +902,6 @@ View=View
 Switch_view=Switch view
 Detach=Detach
 AddHomegrown=Add homegrown players
-RemoveBotPlayers=Remove bot players
 showTimeInClub=Show time in club
 Filter=Filter
 sort.up=Up
