--- a/Info.plist
+++ b/Info.plist
@@ -212,6 +212,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>*.hat-trick.net</string>
 				<string>*.hattrick.interia.pl</string>
 				<string>*.hattrick.uol.com.br</string>
+				<string>*.foxtrick.org</string>
 				<string>www.hattrick-youthclub.org</string>
 				<string>www.fantamondi.it</string>
 			</array>
