--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,124 @@
 			"content/pages/youth-player.js",
 			"content/pages/transfer-search-results.js",
 			"content/pages/match.js",
+			"content/alert/live-alert.js",
+			"content/alert/new-mail.js",
+			"content/alert/ticker-alert.js",
+			"content/alert/ticker-coloring.js",
+			"content/forum/add-leave-conf-button.js",
+			"content/forum/forum-change-posts.js",
+			"content/forum/forum-change-posts-modules.js",
+			"content/forum/forum-last-post.js",
+			"content/forum/forum-next-and-previous.js",
+			"content/forum/forum-presentation.js",
+			"content/forum/forum-preview.js",
+			"content/forum/forum-strip-hattrick-links.js",
+			"content/forum/forum-templates.js",
+			"content/forum/forum-thread-auto-ignore.js",
+			"content/forum/forum-youth-icons.js",
+			"content/forum/go-to-post-box.js",
+			"content/forum/hide-signatures.js",
+			"content/forum/ht-thread-marker.js",
+			"content/forum/mark-all-as-read.js",
+			"content/forum/mark-unread.js",
+			"content/forum/show-forum-pref-button.js",
+			"content/forum/staff-marker.js",
+			"content/information-aggregation/cross-table.js",
+			"content/information-aggregation/election-table.js",
+			"content/information-aggregation/extended-player-details.js",
+			"content/information-aggregation/extra-player-info.js",
+			"content/information-aggregation/flag-collection-to-map.js",
+			"content/information-aggregation/goal-difference-to-tables.js",
+			"content/information-aggregation/history-stats.js",
+			"content/information-aggregation/htms-points.js",
+			"content/information-aggregation/last-login.js",
+			"content/information-aggregation/median-transfer-price.js",
+			"content/information-aggregation/my-monitor.js",
+			"content/information-aggregation/nt-peek.js",
+			"content/information-aggregation/player-birthday.js",
+			"content/information-aggregation/season-stats.js",
+			"content/information-aggregation/series-flags.js",
+			"content/information-aggregation/show-friendly-booked.js",
+			"content/information-aggregation/show-lineup-set.js",
+			"content/information-aggregation/skill-table.js",
+			"content/information-aggregation/team-stats.js",
+			"content/information-aggregation/transfer-deadline.js",
+			"content/information-aggregation/youth-promotes.js",
+			"content/information-aggregation/youth-series-estimation.js",
+			"content/information-aggregation/supporterstats-enhancements.js",
+			"content/links/links.js",
+			"content/links/links-achievements.js",
+			"content/links/links-alliances.js",
+			"content/links/links-arena.js",
+			"content/links/links-challenges.js",
+			"content/links/links-club-transfers.js",
+			"content/links/links-coach.js",
+			"content/links/links-country.js",
+			"content/links/links-economy.js",
+			"content/links/links-fans.js",
+			"content/links/links-league.js",
+			"content/links/links-manager.js",
+			"content/links/links-match.js",
+			"content/links/links-national.js",
+			"content/links/links-player-detail.js",
+			"content/links/links-players.js",
+			"content/links/links-staff.js",
+			"content/links/links-team.js",
+			"content/links/links-tracker.js",
+			"content/links/links-training.js",
+			"content/links/links-youth.js",
+			"content/matches/att-vs-def.js",
+			"content/matches/copy-ratings.js",
+			"content/matches/htms-prediction.js",
+			"content/matches/match-income.js",
+			"content/matches/match-player-colouring.js",
+			"content/matches/match-report-format.js",
+			"content/matches/ratings.js",
+			"content/matches/stars-counter.js",
+			"content/presentation/background-fixed.js",
+			"content/presentation/bookmark-adjust.js",
+			"content/presentation/country-list.js",
+			"content/presentation/currency-converter.js",
+			"content/presentation/custom-medals.js",
+			"content/presentation/fix-css-problems.js",
+			"content/presentation/friendly-interface.js",
+			"content/presentation/header-fix.js",
+			"content/presentation/highlight-cup-wins.js",
+			"content/presentation/highlight-ownerless.js",
+			"content/presentation/ht-date-format.js",
+			"content/presentation/large-flags.js",
+			"content/presentation/league-news-filter.js",
+			"content/presentation/local-time.js",
+			"content/presentation/match-tables.js",
+			"content/presentation/move-manager-online.js",
+			"content/presentation/move-player-select-box.js",
+			"content/presentation/move-player-statement.js",
+			"content/presentation/old-style-face.js",
+			"content/presentation/original-face.js",
+			"content/presentation/personality-images.js",
+			"content/presentation/simple-presentation.js",
+			"content/presentation/skill-coloring.js",
+			"content/presentation/skill-translation.js",
+			"content/presentation/skin-plugin.js",
+			"content/presentation/smaller-pages.js",
+			"content/presentation/team-select-box.js",
+			"content/presentation/youth-skill-hide-unknown.js",
+			"content/shortcuts-and-tweaks/confirm-actions.js",
+			"content/shortcuts-and-tweaks/context-menu-copy.js",
+			"content/shortcuts-and-tweaks/copy-match-id.js",
+			"content/shortcuts-and-tweaks/copy-player-ad.js",
+			"content/shortcuts-and-tweaks/copy-youth.js",
+			"content/shortcuts-and-tweaks/extra-shortcuts.js",
+			"content/shortcuts-and-tweaks/league-and-match-chat.js",
+			"content/shortcuts-and-tweaks/lineup-shortcut.js",
+			"content/shortcuts-and-tweaks/manager-buttons.js",
+			"content/shortcuts-and-tweaks/player-filters.js",
+			"content/shortcuts-and-tweaks/rapid-id.js",
+			"content/shortcuts-and-tweaks/senior-team-shortcuts.js",
+			"content/shortcuts-and-tweaks/table-sort.js",
+			"content/shortcuts-and-tweaks/team-popup-links.js",
+			"content/shortcuts-and-tweaks/transfer-search-filters.js",
+			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
 			"content/redirections.js",
 			"content/read-ht-prefs.js",
 			"content/forum-stage.js",
