links-team.js: AlltidTeamCompare optional
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7557 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -82,6 +82,7 @@ foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
 foxtrick.Links.desc=Basic module essential for other link modules to work properly.
 foxtrick.LinksLeague.desc=Adds some external links to the series page
 foxtrick.LinksTeam.desc=Adds some external links to the team page
+foxtrick.LinksTeam.AlltidTeamCompare.desc=Adds AlltidTeamCompare functions
 foxtrick.LinksCountry.desc=Adds some external links to the country page
 foxtrick.LinksChallenges.desc=Adds some external links to the challenges page
 foxtrick.LinksEconomy.desc=Adds some external links to the economy page
