api: show server unavailable message when there is space for it
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7570 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -947,6 +947,7 @@ oauth.link=Get verification code from chpp.hattrick.org
 oauth.success=FoxTrick has been successfully authorized! Please reload this page to view extensive information provided by FoxTrick.
 
 api.failure=Data access to Hattrick failed. You need to authorize FoxTrick to access your team data. If you have done so, check your network connectivity or try again later.
+api.serverUnavailable=Server unavailable
 
 exception.error=Error %s
 
