--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -289,7 +289,6 @@ foxtrick.SkillTable.ColouredYouth.desc=Show coloured youth skills
 foxtrick.HighlightCupwins.desc=Highlight winning teams on cup matches page
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Highlight cupsets (matches won by the team of lower ranking)
 foxtrick.SkillTranslation.desc=Adds English translations to skills on help/denominations page
-foxtrick.ReadHtPrefs.desc=Automatically detect language, country, and date format (strongly recommended)
 #CountryList
 foxtrick.CountryList.desc=Modifications for country names
 foxtrick.CountryList.SelectBoxes.desc=Replaces English country names in select boxes by their original names
@@ -986,7 +985,8 @@ tab.about=About
 tab.changes=Changes
 tab.help=Help
 
-foxtrick.prefs.basicPreferences=Localization
+foxtrick.prefs.setup=Setup
+foxtrick.prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
 foxtrick.prefs.captionHTLanguage=Language
 foxtrick.prefs.captionHTDateformat=Date format
 foxtrick.prefs.captionHTCountry=Country
