Change text keys for setup entries.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7581 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -987,9 +987,9 @@ tab.help=Help
 
 foxtrick.prefs.setup=Setup
 foxtrick.prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
-foxtrick.prefs.captionHTLanguage=Language
-foxtrick.prefs.captionHTDateformat=Date format
-foxtrick.prefs.captionHTCountry=Country
+foxtrick.prefs.setup.locale=Locale
+foxtrick.prefs.setup.dateFormat=Date format
+foxtrick.prefs.setup.country=Country
 
 foxtrick.prefs.captionCleanupBranch=Stored preferences
 foxtrick.prefs.captionLoadSavePrefs=Export or import preferences
