--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -237,6 +237,7 @@ foxtrick.NewMail.NotifyForum.desc=Show a notification if there are new forum rep
 foxtrick.CopyYouth.desc=Copy functions for youth reports and sources
 foxtrick.CopyYouth.TrainingReport.desc=Training report
 foxtrick.CopyYouth.ScoutComment.desc=Scout comment
+foxtrick.CopyYouth.RejectedToHTY.desc=Copy scout comment and open HT-Youthclub on rejecting player
 foxtrick.CopyYouth.PlayerSource.desc=Player source
 foxtrick.CopyYouth.FixturesSource.desc=Fixtures source
 foxtrick.PlayerBirthday.desc=Shows last and coming birthdays in players overview
