match-order.js: got approved so default on. added description
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7620 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -346,6 +346,7 @@ foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
+foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlights players which played in the last match and adds differences to the ratings predictor
 
 # -----------------------------------------------------------------------------
 
