match-order.js: moving predictions optional
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7632 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -347,6 +347,7 @@ foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlights players which played in the last match and adds differences to the ratings predictor
+foxtrick.MatchOrderInterface.DisplayRatingsBellow.desc=Moves predicted ratings bellow the interface to have lineup and ratings visible together
 
 # -----------------------------------------------------------------------------
 
