match-order: show specialties (optional, default on).
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7641 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -350,6 +350,7 @@ foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlight
 foxtrick.MatchOrderInterface.DisplayRatingsOverlay.desc=Predicted ratings as overlay
 foxtrick.MatchOrderInterface.DisplayRatingsRight.desc=Predicted ratings right
 foxtrick.MatchOrderInterface.DisplayRatingsBellow.desc=Predicted ratings bellow
+foxtrick.MatchOrderInterface.ShowSpecialties.desc=Show player specialties
 
 # -----------------------------------------------------------------------------
 
