added matchsimulator, last macht information to matchorders playerdetails. removed rating bellow option.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7661 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -347,9 +347,7 @@ foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlights players which played in the last match and adds differences to the ratings predictor
-foxtrick.MatchOrderInterface.DisplayRatingsOverlay.desc=Predicted ratings as overlay
-foxtrick.MatchOrderInterface.DisplayRatingsRight.desc=Predicted ratings right
-foxtrick.MatchOrderInterface.DisplayRatingsBellow.desc=Predicted ratings bellow
+foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Show predicted ratings alongside
 foxtrick.MatchOrderInterface.ShowSpecialties.desc=Show player specialties
 
 # -----------------------------------------------------------------------------
@@ -509,6 +507,12 @@ match.type.youth.league=Youth League
 match.type.youth.friendly=Youth Friendly
 match.type.youth.friendly.cup=Youth Friendly (Cup rules)
 
+matchOrder.noMatchSelected=No match selected
+matchOrder.comparedTo=Compared to:
+matchOrder.previousPrediction=Previous prediction
+matchOrder.previousPrediction=Previous prediction
+matchOrder.AddMatchManually=Add a match manually
+
 #Skills
 Playmaking=Playmaking
 Playmaking.abbr=PM
@@ -572,6 +576,11 @@ Stamina.abbr=Stm
 Form=Form
 Form.abbr=Fo
 
+Loyalty=Loyalty
+Loyalty.abbr=Lo
+MotherClubBonus=Motherclub bonus
+MotherClubBonus.abbr=MB
+
 Status=Status
 Status.abbr=Status
 
@@ -589,6 +598,7 @@ Last_stars=Latest Rating
 Last_stars.abbr=Rt
 Last_position=Latest Position
 Last_position.abbr=Pos
+Last_match_played_as=Played %1 min as %2 in his last match.
 
 Bruised=Bruised
 Bruised.abbr=Bru
@@ -1029,6 +1039,8 @@ link.nightlyChrome=Development builds for Google Chrome
 link.nightlyOpera=Development builds for Opera
 link.nightlySafari=Development builds for Safari
 link.recentChanges=Recent changes
+
+module.link=You can copy and paste this link to the forum to direct here
 
 foxtrick.showReleaseNotes=Show release notes after every update
 foxtrick.versionReleaseNotes=Show release notes for:
