--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -76,6 +76,7 @@ foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
+foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level bellow.
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
 foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
@@ -473,6 +474,9 @@ ForumSpecialBBCode.pre=Insert 'pre' format tag
 ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
 ForumSpecialBBCode.tableSeparator=Convert "%s" to cells
 ForumSpecialBBCode.enterSeparator=Enter a custom separator
+
+
+ShowNestedQoutes=Show nested qoutes  
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Enter filter name:
