table-of-statistical-truth.js: v1
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7665 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -865,6 +865,16 @@ HTMSPrediction.winDrawLoss=win/draw/loss
 HTMSPrediction.title=Match Analysis by HTMS
 HTMSPrediction.changePrediction=Change prediction
 
+#htms table of statistical truth
+truthTable.table=HTMS Table of statistical truth
+truthTable.predicted_position=#
+truthTable.name=Team
+truthTable.real_position=Real pos.
+truthTable.real_points=Real points
+truthTable.predicted_points=Pred. Points
+truthTable.difference=Diff
+				
+
 # HTMSPoints
 HTMSPoints=HTMS Points:
 HTMSPoints.AbilityAndPotential=Ability: %1 / Potential: %2
