--- a/manifest.json
+++ b/manifest.json
@@ -77,6 +77,7 @@
 			"content/information-aggregation/skill-table.js",
 			"content/information-aggregation/team-stats.js",
 			"content/information-aggregation/transfer-deadline.js",
+			"content/information-aggregation/table-of-statistical-truth.js",
 			"content/information-aggregation/youth-promotes.js",
 			"content/information-aggregation/youth-series-estimation.js",
 			"content/information-aggregation/supporterstats-enhancements.js",
