table-of-statistical-truth. v2
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7666 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -872,8 +872,8 @@ truthTable.name=Team
 truthTable.real_position=Real pos.
 truthTable.real_points=Real points
 truthTable.predicted_points=Pred. Points
-truthTable.difference=Diff
-				
+truthTable.difference=±
+truthTable.notAvailableYet=Data not available yet. Goto HTMS to create the needed data
 
 # HTMSPoints
 HTMSPoints=HTMS Points:
