match-order: addad teamnames and loadings
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7669 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -864,6 +864,7 @@ HTMSPrediction.prediction=Predicted result
 HTMSPrediction.winDrawLoss=win/draw/loss
 HTMSPrediction.title=Match Analysis by HTMS
 HTMSPrediction.changePrediction=Change prediction
+HTMSPrediction.team=Team
 
 #htms table of statistical truth
 truthTable.table=HTMS Table of statistical truth
