match-report-format.js: initial commit with XML from Hattrick.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7673 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -731,6 +731,9 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
+MatchReportFormat.halfTime=Half Time
+MatchReportFormat.fullTime=Full Time
+
 CopySelected.desc=Copy selection with Ctrl + C.
 SpecialPaste.desc=Paste with Shift + Left Click.
 
