match-report-format.js: add line-up section.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7680 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -731,8 +731,12 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
+MatchReportFormat.lineup=Line-up
 MatchReportFormat.halfTime=Half Time
 MatchReportFormat.fullTime=Full Time
+
+match.role.setPieces.abbr=SP
+match.role.captain.abbr=Capt.
 
 CopySelected.desc=Copy selection with Ctrl + C.
 SpecialPaste.desc=Paste with Shift + Left Click.
