added subheader-folding module
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7695 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -137,6 +137,7 @@
 			"content/presentation/skill-translation.js",
 			"content/presentation/skin-plugin.js",
 			"content/presentation/smaller-pages.js",
+			"content/presentation/subheader-folding.js",
 			"content/presentation/team-select-box.js",
 			"content/presentation/youth-skill-hide-unknown.js",
 			"content/shortcuts-and-tweaks/confirm-actions.js",
