skill-table.js: added end of game stars
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7697 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -596,10 +596,14 @@ Red_card.abbr=R
 Speciality=Speciality
 Speciality.abbr=Sp
 
-Last_match=Latest Match
-Last_match.abbr=Latest
-Last_stars=Latest Rating
+Last_match=Last Match
+Last_match.abbr=Last
+Last_stars=Latest stars
 Last_stars.abbr=Rt
+Last_stars_EndOfGame=Last stars at end of game
+Last_stars_EndOfGame.abbr=Rt
+Last_stars_decline=Last star decline
+Last_stars_decline.abbr=Diff
 Last_position=Latest Position
 Last_position.abbr=Pos
 Last_match_played_as=Played %1 min as %2 in his last match.
