--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -350,6 +350,7 @@ foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlights players which played in the last match and adds differences to the ratings predictor
 foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Show predicted ratings alongside
 foxtrick.MatchOrderInterface.ShowSpecialties.desc=Show player specialties
+foxtrick.ContractableHeaders.desc=Makes all h2 headers in Hattrick contractable. Remembers last setting individually based on page type and header title
 
 # -----------------------------------------------------------------------------
 
