table-of-statistical-truth.:  added link to htms for available tables
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7700 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -887,6 +887,7 @@ truthTable.real_points=Real points
 truthTable.predicted_points=Pred. Points
 truthTable.difference=±
 truthTable.notAvailableYet=Data not available yet. Goto HTMS to create the needed data
+truthTable.tableAtHTMS=This table on the HTMS webpage
 
 # HTMSPoints
 HTMSPoints=HTMS Points:
