--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -330,6 +330,7 @@ foxtrick.HTMSPoints.desc=Show the training points for a player calculated with H
 foxtrick.HTMSPoints.AddToPlayer.desc=Show on player page
 foxtrick.HTMSPoints.AddToSearchResult.desc=Show on transfer search result page
 foxtrick.HTMSPoints.AddToPlayerList.desc=Show on player list page
+foxtrick.TableOfStatisticalTruth.desc=Statistical prediction of serie's final standing positions (only for finished seasons). 
 foxtrick.FriendlyInterface.desc=Tweaks to provide friendlier interface
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Show player names without ellipses in match line up page
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Display national teams as links for national players
