renamed contractable-headers to header-toggle. added to safari
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7718 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -156,6 +156,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/presentation/fix-css-problems.js</string>
 				<string>content/presentation/friendly-interface.js</string>
 				<string>content/presentation/header-fix.js</string>
+				<string>content/presentation/header-toggle.js</string>
 				<string>content/presentation/highlight-cup-wins.js</string>
 				<string>content/presentation/highlight-ownerless.js</string>
 				<string>content/presentation/ht-date-format.js</string>
