--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -556,6 +556,40 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Keeper
+match.pos.kp.abbr=KP
+match.pos.lb=Left back
+match.pos.lb.abbr=LB
+match.pos.lcd=Left central defender
+match.pos.lcd.abbr=LCD
+match.pos.mcd=Middle central defender
+match.pos.mcd.abbr=MCD
+match.pos.rcd=Right central defender
+match.pos.rcd.abbr=RCD
+match.pos.rb=Right back
+match.pos.rb.abbr=RB
+match.pos.lw=Left winger
+match.pos.lw.abbr=LW
+match.pos.lcm=Left central midfielder
+match.pos.lcm.abbr=LCM
+match.pos.mcm=Middle central midfielder
+match.pos.mcm.abbr=MCM
+match.pos.rcm=Right central midfielder
+match.pos.rcm.abbr=RCM
+match.pos.rw=Right winger
+match.pos.rw.abbr=RW
+match.pos.lf=Left forward
+match.pos.lf.abbr=LF
+match.pos.mf=Middle forward
+match.pos.mf.abbr=MF
+match.pos.rf=Right forward
+match.pos.rf.abbr=RF
+
+match.role.setPieces=Set-pieces taker
+match.role.setPieces.abbr=SP
+match.role.captain=Captain
+match.role.captain.abbr=Capt.
+
 General=General
 
 PlayerNumber=Player number
@@ -740,9 +774,6 @@ CopyYouth.goto=Go to %s
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.halfTime=Half Time
 MatchReportFormat.fullTime=Full Time
-
-match.role.setPieces.abbr=SP
-match.role.captain.abbr=Capt.
 
 CopySelected.desc=Copy selection with Ctrl + C.
 SpecialPaste.desc=Paste with Shift + Left Click.
