split match-order.js to that and match-simulator.js. skillnumbers moved to skill-coloring.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7732 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -348,11 +348,14 @@ foxtrick.ShowLineupSet.Ownerless.desc=Highlight ownerless teams
 foxtrick.ShowLineupSet.Winning.desc=Highlight winning teams
 foxtrick.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
-foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. Highlights players which played in the last match and adds differences to the ratings predictor
-foxtrick.MatchOrderInterface.DisplayRatingsAlongside.desc=Show predicted ratings alongside
-foxtrick.MatchOrderInterface.ShowSpecialties.desc=Show player specialties
+foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. 
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows last position and time played in the details box
+foxtrick.MatchOrderInterface.Specialties.desc=Show player specialties
+foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface. 
+foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
+foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction on the right 
+foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction bellow
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
-
 # -----------------------------------------------------------------------------
 
 
