--- a/Info.plist
+++ b/Info.plist
@@ -146,6 +146,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/matches/match-order.js</string>
 				<string>content/matches/match-player-colouring.js</string>
 				<string>content/matches/match-report-format.js</string>
+				<string>content/matches/match-simulator.js</string>
 				<string>content/matches/ratings.js</string>
 				<string>content/matches/stars-counter.js</string>
 				<string>content/presentation/background-fixed.js</string>
