match-order: added swap_positions (on) and stay_on_page (off) options
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7743 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -351,6 +351,8 @@ foxtrick.MobileEnhancements.desc=Set of enhancements for mobile devices
 foxtrick.MatchOrderInterface.desc=Tweaks on the match order interface. 
 foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows last position and time played in the details box
 foxtrick.MatchOrderInterface.Specialties.desc=Show player specialties
+foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the matchorder page after saving
+foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players left to right
 foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface. 
 foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
 foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction on the right 
@@ -519,8 +521,9 @@ match.type.youth.friendly.cup=Youth Friendly (Cup rules)
 matchOrder.noMatchSelected=No match selected
 matchOrder.comparedTo=Compared to:
 matchOrder.previousPrediction=Previous prediction
-matchOrder.previousPrediction=Previous prediction
 matchOrder.AddMatchManually=Add a match manually
+matchOrder.swapPositions=Swap positions
+
 
 #Skills
 Playmaking=Playmaking
