git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7751 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -622,8 +622,8 @@ Stamina.abbr=Stm
 Form=Form
 Form.abbr=Fo
 
-Loyalty=Loyalty
-Loyalty.abbr=Lo
+Loyality=Loyality
+Loyality.abbr=Lo
 MotherClubBonus=Motherclub bonus
 MotherClubBonus.abbr=MB
 
