matchsimlator; right and bellow option description swaped/fixed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7759 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -355,8 +355,8 @@ foxtrick.MatchOrderInterface.StayOnPage.desc=Stay on the matchorder page after s
 foxtrick.MatchOrderInterface.SwapPositions.desc=Add a link to swap players left to right
 foxtrick.MatchSimulator.desc=Adds a match simulator to the match order interface. 
 foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
-foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction on the right 
-foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction bellow
+foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction bellow
+foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
 # -----------------------------------------------------------------------------
 
