L10n strings for the homegrown/purchsed filter options.
foxtrick.TeamStats.HomeGrownPlayers.label
foxtrick.TeamStats.PurchasedPlayers.label

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7775 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -401,6 +401,8 @@ foxtrick.TeamStats.Pictures.label=Faces
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
 foxtrick.TeamStats.ActivePlayers.label=Active players
+foxtrick.TeamStats.HomeGrownPlayers.label=Homegrown players
+foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
 
 #season stats
 #note to translators. use abreviations of league table where applicable
