--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -358,6 +358,9 @@ foxtrick.MatchSimulator.RatingsOnTop.desc=Keeps ratings prediction on top
 foxtrick.MatchSimulator.RatingsBellow.desc=Displays prediction bellow
 foxtrick.MatchSimulator.RatingsRight.desc=Displays prediction on the right
 foxtrick.HeaderToggle.desc=Clicking on h2-headers toggles showing and hiding of the following section. Remembers last setting individually based on page type and header title
+foxtrick.Filter.desc=Adds filters to top players page
+foxtrick.RatingsRange.desc=Displays average ratings in statistics in the 0-20 range
+
 # -----------------------------------------------------------------------------
 
 
@@ -492,6 +495,20 @@ foxtrick.transferfilter.Enter_filter_name=Enter filter name:
 foxtrick.transferfilter.delete_filter_ask=Do you really want to delete this filter?
 foxtrick.transferfilter.save_new_filter=Save new filter
 foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filters
+
+#Filter
+Filters=Filters
+Filters.filter=Ok
+Filters.clear=Clear
+Filters.noFilter=No filter
+Filters.none=None
+Filters.days=Days
+Filters.tsi=TSI
+Filters.stamina=Stamina
+Filters.Form=Form
+Filters.XP=Experience
+Filters.specialty=Specialty
+Filters.stars=Stars
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
