--- a/manifest.json
+++ b/manifest.json
@@ -134,6 +134,7 @@
 			"content/presentation/old-style-face.js",
 			"content/presentation/original-face.js",
 			"content/presentation/personality-images.js",
+			"content/presentation/ratings-range.js",
 			"content/presentation/simple-presentation.js",
 			"content/presentation/skill-coloring.js",
 			"content/presentation/skill-translation.js",
@@ -147,6 +148,7 @@
 			"content/shortcuts-and-tweaks/copy-player-ad.js",
 			"content/shortcuts-and-tweaks/copy-youth.js",
 			"content/shortcuts-and-tweaks/extra-shortcuts.js",
+			"content/shortcuts-and-tweaks/filter.js",
 			"content/shortcuts-and-tweaks/league-and-match-chat.js",
 			"content/shortcuts-and-tweaks/lineup-shortcut.js",
 			"content/shortcuts-and-tweaks/manager-buttons.js",
