forum-youth-icons: added symbols tag
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7820 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -72,6 +72,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
+foxtrick.ForumYouthIcons.symbols.desc=Adds icon for bellow symbols. Characters grouped with ' ' are interpreted as single symbol.
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
@@ -486,6 +487,8 @@ ForumSpecialBBCode.pre=Insert 'pre' format tag
 ForumSpecialBBCode.table=Insert 'table' format tags resp. convert selected text into a table (Lines are converted in rows. Text separated by "%s" will be converted into cells.)
 ForumSpecialBBCode.tableSeparator=Convert "%s" to cells
 ForumSpecialBBCode.enterSeparator=Enter a custom separator
+ForumSpecialBBCode.forumSymbol=Insert "%s"
+ForumSpecialBBCode.symbols=Insert symbol: %s
 
 
 ShowNestedQoutes=Show nested qoutes  
@@ -542,7 +545,9 @@ matchOrder.comparedTo=Compared to:
 matchOrder.previousPrediction=Previous prediction
 matchOrder.AddMatchManually=Add a match manually
 matchOrder.swapPositions=Swap positions
-
+matchOrder.options=Options
+matchOrder.staminaDiscount=Stamina discount
+matchOrder.summary=Summary
 
 #Skills
 Playmaking=Playmaking
