ratings: hide averages option
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7823 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -33,6 +33,7 @@ foxtrick.AttVsDef.newstyle.desc=new style
 foxtrick.AttVsDef.oldstyleifkseparated.desc=old style (separated ind. set pieces)
 #Ratings
 foxtrick.Ratings.desc=Adds ratings to the match page
+foxtrick.Ratings.HideAverages.desc=Hide average ratings
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (detailed)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats separated per rating
