youth-icons, symbol text is now comma separated
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7830 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -73,7 +73,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Adds icon for YouthSeriesID
 foxtrick.ForumYouthIcons.enlarge_input.desc=Enlarges textbox for better writing
 foxtrick.ForumYouthIcons.pre.desc=Adds icon for Forum 'pre' format
 foxtrick.ForumYouthIcons.table.desc=Adds icon for table. Custom tag accepts regular expresions (Mask \ with additional \, eg \\.).
-foxtrick.ForumYouthIcons.symbols.desc=Adds icon for bellow symbols. Characters grouped with ' ' are interpreted as single symbol.
+foxtrick.ForumYouthIcons.symbols.desc=Adds icon for bellow symbols. separate by semi-colons. 
 foxtrick.ForumYouthIcons.debug.desc=Adds icon for FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
