--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -803,6 +803,7 @@ CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
 MatchReportFormat.lineup=Line-up
+MatchReportFormat.kickOff=Kick-off
 MatchReportFormat.halfTime=Half Time
 MatchReportFormat.fullTime=Full Time
 
