#619 Embed Media ... iframe embeding Youtube, vimeo, funnyordie ... unsure about css handling. Disabled by default atm. Had problems in the "slow" case on chrome.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7843 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -79,6 +79,12 @@ foxtrick.ForumYouthIcons.settings.desc=Adds icon for FoxTrick settings
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Replaces FoxTrick HT-ML tags with HTML tags (i.e. 'pre' element)
 foxtrick.FormatPostingText.NestedQoutesAsSpoilers.desc=Shows nested qoutes in a spoiler. Specify the level bellow.
+#EmbedMedia
+foxtrick.EmbedMedia.desc=Detects links to media files and embeds them into the site. (Experimental)
+foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
+foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Embed Vimeo videos
+foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embed FunnyOrDie videos
+#
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
 foxtrick.ShowForumPrefButton.desc=Link to forum preferences on forum pages
