EmbedMedia Daily motion support, move to own module/integrating code still to come
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7848 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -84,6 +84,7 @@ foxtrick.EmbedMedia.desc=Detects links to media files and embeds them into the s
 foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Embed Vimeo videos
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embed FunnyOrDie videos
+foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Embed Dailymotion videos
 #
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
