@0.8: MB and loyality to skilltable
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.8@7867 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -564,6 +564,11 @@ Stamina.abbr=Stm
 Form=Form
 Form.abbr=Fo
 
+Loyality=Loyality
+Loyality.abbr=Lo
+MotherClubBonus=Motherclub bonus
+MotherClubBonus.abbr=MB
+
 Status=Status
 Status.abbr=Status
 
