match-report-format.js: show unknown player for unknown player.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7871 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -628,6 +628,8 @@ match.role.setPieces.abbr=SP
 match.role.captain=Captain
 match.role.captain.abbr=Capt.
 
+match.player.unknown=Unknown player
+
 General=General
 
 PlayerNumber=Player number
