match-report-format.js: add new indicators and code rearrangement.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7875 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -815,6 +815,9 @@ MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Kick-off
 MatchReportFormat.halfTime=Half Time
 MatchReportFormat.fullTime=Full Time
+MatchReportFormat.extraTime=Extra Time
+MatchReportFormat.penaltyShootOut=Penalty Shoot-out
+MatchReportFormat.result=Result
 
 CopySelected.desc=Copy selection with Ctrl + C.
 SpecialPaste.desc=Paste with Shift + Left Click.
