Embed Media: Now a module
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7900 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -50,6 +50,7 @@
 			"content/forum/forum-templates.js",
 			"content/forum/forum-thread-auto-ignore.js",
 			"content/forum/forum-youth-icons.js",
+			"content/forum/embed-media.js",
 			"content/forum/go-to-post-box.js",
 			"content/forum/hide-signatures.js",
 			"content/forum/ht-thread-marker.js",
