players. added youthplayer.xml. skilltable: added pullDate, moved rebought homegrown to motherclub
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7935 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -636,6 +636,9 @@ PlayerNumber.abbr=#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
+CanBePromotedIn=Can be promoted in
+CanBePromotedIn.abbr=Prom
+
 Personality=Personality
 Agreeability=Agreeability
 Agreeability.abbr=Ab
@@ -713,8 +716,6 @@ Current_league.abbr=League
 
 JoinedSince=Joined since
 JoinedSince.abbr=Since
-HomeGrown=Youthplayer
-HomeGrown.abbr=YP
 
 Hotlist=Hotlist
 Hotlist.abbr=Hot
