match-report-format Dispays event specific icons between minute and text.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -148,6 +148,7 @@ foxtrick.ForumLastPost.lastpage.desc=Jump to last page, not last posting
 foxtrick.MatchPlayerColouring.desc=Colors the players depending on their team in the match report. When using links on playerdetails page, it highlights this player only
 foxtrick.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separate own player coloring
 foxtrick.MatchReportFormat.desc=Presentation of the report line by line according to match events.
+foxtrick.MatchReportFormat.ShowEventIcons.desc=Add event specific icons.
 foxtrick.MatchReportFormat.SeparateOwnTeamColors.desc=Separate own team coloring
 foxtrick.ForumRedirManagerToTeam.desc=Redirect links from manager page to team page on forum links
 foxtrick.ManagerButtons.desc=Add or change manager buttons on manager and team page
