player-filters.js : Add "not transfer listed" by user request (albertorma htid: 10559300)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7966 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -411,6 +411,7 @@ foxtrick.TeamStats.TransferListed.label=Transfer-listed
 foxtrick.TeamStats.Pictures.label=Faces
 foxtrick.TeamStats.PlayedLatest.label=Played in last match
 foxtrick.TeamStats.NotPlayedLatest.label=Did not play last match
+foxtrick.TeamStats.NotTransferListed.label=Not Transfer-listed
 foxtrick.TeamStats.ActivePlayers.label=Active players
 foxtrick.TeamStats.HomeGrownPlayers.label=Homegrown players
 foxtrick.TeamStats.PurchasedPlayers.label=Purchased players
