match-report-format.js and related files: Added misses, tired players, general improvements and introduced 2 column display.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7967 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -812,6 +812,7 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
+MatchReportFormat.matchReport=Match Report
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Kick-off
 MatchReportFormat.halfTime=Half Time
