--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -812,7 +812,7 @@ CopyYouth.fixturesSource=Copy fixtures source
 CopyYouth.fixturesSource.copied=Fixtures source has been copied.
 CopyYouth.goto=Go to %s
 
-MatchReportFormat.matchReport=Match Report
+MatchReportFormat.MatchReport=Match Report
 MatchReportFormat.lineup=Line-up
 MatchReportFormat.kickOff=Kick-off
 MatchReportFormat.halfTime=Half Time
