New Module: Adds extra links to directly jump to pages in the forum. #866
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7986 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -85,6 +85,8 @@ foxtrick.EmbedMedia.EmbedYoutubeVideos.desc=Embed YouTube videos
 foxtrick.EmbedMedia.EmbedVimeoVideos.desc=Embed Vimeo videos
 foxtrick.EmbedMedia.EmbedFunnyOrDieVideos.desc=Embed FunnyOrDie videos
 foxtrick.EmbedMedia.EmbedDailymotionVideos.desc=Embed Dailymotion videos
+#Forum direct page links
+foxtrick.DirectPageLinks.desc=Adds links that allow you to jump to a certain page in a Forum thread.
 #
 foxtrick.CopyPostID.desc=Provide a link to copy a post's ID
 foxtrick.CopyPosting.desc=Add icon to copy the posting including references
