Module listing update.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7991 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -77,8 +77,10 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/alert/ticker-alert.js</string>
 				<string>content/alert/ticker-coloring.js</string>
 				<string>content/forum/add-leave-conf-button.js</string>
+				<string>content/forum/embed-media.js</string>
 				<string>content/forum/forum-change-posts.js</string>
 				<string>content/forum/forum-change-posts-modules.js</string>
+				<string>content/forum/forum-direct-page-links.js</string>
 				<string>content/forum/forum-last-post.js</string>
 				<string>content/forum/forum-next-and-previous.js</string>
 				<string>content/forum/forum-presentation.js</string>
